# nashor-gg

./: .gitignore
backend/: Cargo.toml
backend/src/: main.rs
backend/src/helpers/: mod.rs
backend/src/routes/api/: mod.rs
backend/src/routes/api/matches/: mod.rs
backend/src/routes/api/summoner/: mod.rs
backend/src/services/: mod.rs
backend/src/services/riot/: mod.rs
backend/src/utils/: mod.rs
frontend/: tailwind.config.ts
frontend/src/app/: page.tsx
frontend/src/components/search-bar/: index.tsx
